--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "sw.js",
   "scripts": {
+    "build:service-worker": "workbox generateSW workbox-config.js",
+    "build": "npm run build:service-worker",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "netlify dev",
     "netlify:open": "netlify open",
@@ -15,5 +17,8 @@
   "dependencies": {
     "dotenv": "^16.3.2",
     "stripe": "^14.13.0"
+  },
+  "devDependencies": {
+    "workbox-cli": "^7.0.0"
   }
 }
