--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "netlify dev",
     "netlify:open": "netlify open",
-    "deploy": "git push"
+    "deploy": "git push",
+    "build": "workbox generateSW workbox-config.js"
   },
   "keywords": [],
   "author": "",
